--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
   <!-- Imports an icon to represent the document. -->
-  <link rel="icon" href="assets/icons/favicon-x16.png" type="image/x-icon" />
+  <link rel="icon" href="%PUBLIC_URL%/assets/icons/favicon-x16.png" type="image/x-icon" />
 
   <!-- Imports the manifest to represent the web application. A web app must have a manifest to be a PWA. -->
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <style>
     body,
     h1,
@@ -48,11 +48,11 @@
 
     /* Works on Chrome, Edge, and Safari */
     *::-webkit-scrollbar {
-      width: 12px;
+      width: 8px;
     }
 
     *::-webkit-scrollbar-track {
-      background: #404040;
+      background: rgba(64,64,64,.15);
     }
 
     *::-webkit-scrollbar-thumb {
