--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
     *::-webkit-scrollbar-thumb {
       background-color: white;
       border-radius: 20px;
-      border: 3px solid #404040;
+      border: none;
     }
   </style>
 </head>
